--- a/docs/_posts/1870-09-13-13-septembre-1870.md
+++ b/docs/_posts/1870-09-13-13-septembre-1870.md
@@ -28,7 +28,7 @@ procurer un homme de 5ct par jours pour soigner Latis.
 Louis me dit que Madame Grünberg lui aurait dit que si Amand partait il
 faudrait confier Latis à un de vos amis, je vais voir M<sup>r</sup> Servant à ce sujet.
 
-La revue passée par le Gouverneur de Paris le Gal Trochu a été splendide d'élan
+La revue passée par le Gouverneur de Paris le G<sup>al</sup> Trochu a été splendide d'élan
 et d'enthousiasme, seulement en voyant passer toutes ces courageuses phalanges
 on ne pouvait maitriser une émotion bien vive, demain peut-être le sang
 recommencera à couler......
