--- a/docs/_posts/1870-10-10-10-octobre-1870.md
+++ b/docs/_posts/1870-10-10-10-octobre-1870.md
@@ -6,7 +6,7 @@ author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
 post_scriptum: |
-  On parle beaucoup aujourd'hui de retour à Paris du Gal américain Burnside qui
+  On parle beaucoup aujourd'hui de retour à Paris du G<sup>al</sup> américain Burnside qui
   après avoir passé plusieurs jours dans le camp ennemi, aurait une communication
   à faire au Gouvernement. On le croit porteur de paroles de conciliation, mais
   rien encore n'a transpiré à ce sujet, et la réponse faite à Jules Favre laisse
