--- a/docs/_posts/1870-10-16-16-octobre-1870.md
+++ b/docs/_posts/1870-10-16-16-octobre-1870.md
@@ -16,7 +16,7 @@ Je vous confirme, Monsieur, ma lettre du 15 C<sup>t</sup>.
 L'événement émotionnant de la journée est la cérémonie des funérailles à la
 Madeleine, du Comte de Dampierre chef de Bataillon de la Mobile de l'Aube, tué
 jeudi dernier à Bagneux, en montrant à ses soldats le chemin de l'honneur. Le
-Gal Vinoise (?) qui avait dirigé l'action et notre Gouverneur le Gal Trochu
+G<sup>al</sup> Vinoise (?) qui avait dirigé l'action et notre Gouverneur le G<sup>al</sup> Trochu
 y assistaient. Le Comte agé de 33 ans était  un des plus riches Industriels du
 département de l'Aube, il est mort le sourir sur les lèvres, heureux a-t-il
 dit, d'aller rejoindre sa jeune femme qu'il avait perdue il y a 3 ans.
