--- a/docs/_posts/1870-11-01-1er-novembre-1870.md
+++ b/docs/_posts/1870-11-01-1er-novembre-1870.md
@@ -27,8 +27,8 @@ battait dans tout Paris,  une tentative audacieuse venait d'être faite
 et Félix Piat s'était ruée dans la salle des délibérations du Gouvernement et
 s'y était installée pour décréter la Commune. A minuit, nous étions relevés de
 notre poste par la Garde-Mobile, et nous étions dirigés sur la Place Vendôme
-pour attendre les ordres. C'est là, qu'à 3 heures et demie du matin, le Gal
-Trochu délivré miraculeusement d'entre les mains de ces forcenés par le 106me
+pour attendre les ordres. C'est là, qu'à 3 heures et demie du matin, le
+G<sup>al</sup> Trochu délivré miraculeusement d'entre les mains de ces forcenés par le 106me
 Bataillon de la Gde Natle, est venu nous passer en revue et nous remercier de
 notre concours. J'avais les pieds à la glace et la tête en feu et vous pouvez
 vous imaginer la surprise de ma femme me voyant rentrer à cette heure indue.
