--- a/docs/_posts/1870-11-04-4-novembre-1870.md
+++ b/docs/_posts/1870-11-04-4-novembre-1870.md
@@ -32,7 +32,7 @@ Lundi on votera pour celle des adjoints. Paris reprend son calme habituel, et
 l'attention détournée un moment des remparts s'y reporte avec plus de confiance
 encore qu'avant ces dissentions intérieures.
 
-Le Gal Clément Thomas a été nommé Gal commandant de la Garde-Nationale en
-remplacement du Gal Tamisier démissionnaire.
+Le G<sup>al</sup> Clément Thomas a été nommé G<sup>al</sup> commandant de la Garde-Nationale en
+remplacement du G<sup>al</sup> Tamisier démissionnaire.
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments dévoués.
