--- a/docs/_posts/1870-11-06-6-novembre-1870.md
+++ b/docs/_posts/1870-11-06-6-novembre-1870.md
@@ -28,8 +28,8 @@ bivouac sont défendus aujourd'hui, à cause des poudrières qui se trouvent
 
 Nous sommes allés nous promener, aujourd'hui, jusqu'au pont de Neuilly, mais
 on ne passe pas le pont. Les promeneurs sont nombreux dans l'avenue dont une
-grande partie des maisons est occupée par l'armée et la Garde-Mobile, le Gal
-Ducroc ayant son quartier général chez Gillet le Restaurateur de la Porte
+grande partie des maisons est occupée par l'armée et la Garde-Mobile,
+le G<sup>al</sup> Ducroc ayant son quartier général chez Gillet le Restaurateur de la Porte
 Maillot. A part 8 chevaux faisant partie de l'Etat Major et un Lieutt de
 Cavalerie habitant l'Entresol, notre Maison de la rue du Marché n'est pas
 occupée.
