--- a/docs/_posts/1870-11-07-7-novembre-1870.md
+++ b/docs/_posts/1870-11-07-7-novembre-1870.md
@@ -27,7 +27,7 @@ lui ont pas réussi, elle a l'estomac détraqué.
 J'ai depuis hier, un cheval de l'Intendance Générale dans vos écuries, je l'ai
 accueilli avec d'autant plus d'empressement que le Gouvernement est à la
 recherche des écuries vides pour les utiliser à l'occasion. C'est un des
-chevaux de l'Intendant Gal M<sup>r</sup> Wolff que nous voyons beaucoup, et qui ayant son
+chevaux de l'Intendant G<sup>al</sup> M<sup>r</sup> Wolff que nous voyons beaucoup, et qui ayant son
 appartement rue St Florentin, tout à côté de la rue Royale, désire avoir son
 cheval préféré plus près de lui, les autres se trouvant au Palais Royal. J'en
 avais parlé à Monsieur Louis, il y a quelques jours, qui m'avait autorisé à 
