--- a/docs/_posts/1870-11-17-17-novembre-1870.md
+++ b/docs/_posts/1870-11-17-17-novembre-1870.md
@@ -23,7 +23,7 @@ je vous envoie la carte munie de tous ses timbres et vous n'aurez qu'à écrire
 les oui ou les non dans la colonne répondant au chiffre de la demande.
 Puis vous aurez l'obligeance d'adresser cette carte à l'adresse suivante:
 
-> Monsieur le Délégué du Directeur Gal des Postes
+> Monsieur le Délégué du Directeur G<sup>al</sup> des Postes
 >
 > (Puy de Dôme) à <ins>Clermont-Ferrand</ins>
 
