--- a/docs/_posts/1870-11-19-19-novembre-1870.md
+++ b/docs/_posts/1870-11-19-19-novembre-1870.md
@@ -20,7 +20,7 @@ Cette nouvelle rassurante me laisse encore bien des inquiétudes car aucun
 détail sur l'occupation ne nous est encore parvenu.
 
 La première ascension de nuit pour les ballons a eu lieu la nuit dernière, le
-Ballon Gal Ulric s'est enlevé à une heure du matin par un temps calme, mais un
+Ballon G<sup>al</sup> Ulric s'est enlevé à une heure du matin par un temps calme, mais un
 brouillard épais.
 Il était porteur de 300 kilog. de dépêches et j'espère bien que mes deux
 lettres importantes des 17 et 18 C<sup>t</sup> étaient du nombre.
