--- a/docs/_posts/1870-12-02-2-decembre-1870.md
+++ b/docs/_posts/1870-12-02-2-decembre-1870.md
@@ -20,7 +20,7 @@ vieilles troupes.
 Toutes les positions, que l'on avait projeté d'occuper, ont été conservées
 malgré de nouvelles offensives de l'ennemi qui, par deux fois, a été obligé de
 se retirer.
-Le Gal Renaud a été atteint par un éclat d'obus qui a nécessité l'amputation
+Le G<sup>al</sup> Renaud a été atteint par un éclat d'obus qui a nécessité l'amputation
 d'une jambe, mais sa situation est aussi bonne que possible. Plusieurs
 officiers supérieurs sont tombés tués ou blessés, mais la puissance de notre
 artillerie a diminué de beaucoup nos pertes qui eussent été énormes, car les
