--- a/docs/_posts/1870-07-12-12-juillet-1870.md
+++ b/docs/_posts/1870-07-12-12-juillet-1870.md
@@ -12,7 +12,7 @@ Monsieur A. Grünberg, Heidelberg
 Je reçois votre lettre du 10 C<sup>t</sup> et vous confirme mes trois dernières lettres
 des 9, 10 et 11 C<sup>t</sup> adressées à Heidelberg.
 
-Par même courrier, j'envoie les dessins de bracelets à Mme Ismalun, en lui
+Par même courrier, j'envoie les dessins de bracelets à M<sup>me</sup>  Ismalun, en lui
 fesant toutes les annotations que vous m'indiquez.
 
 Rien n'a transpiré, encore, sur les dépèches de Prusse, on est cependant moins
