--- a/docs/_posts/1870-09-10-10-septembre-1870.md
+++ b/docs/_posts/1870-09-10-10-septembre-1870.md
@@ -22,7 +22,7 @@ Je vous confirme ma lettre du 9 C<sup>t</sup>.
 Ma femme est allée ce matin à Croissy pour en rapporter les choses les plus
 précieuses, non pas que je craigne le pillage de l'ennemi, mais bien celui des
 quelques mauvais sujets qui y resteront. Louise l'a accompagnée avec toutes les
-clés. Mme Eymond dureste a commencé d'aujourd'hui le déménagement des meubles
+clés. M<sup>me</sup>  Eymond dureste a commencé d'aujourd'hui le déménagement des meubles
 qui lui appartiennent.
 
 Vous avez reçu deux fois déjà des billets de garde et comme j'ai répondu au
