--- a/docs/_posts/1870-09-18-18-septembre-1870.md
+++ b/docs/_posts/1870-09-18-18-septembre-1870.md
@@ -26,7 +26,7 @@ coupées, il n'y a que les trains de Versailles, de St Germain, et de Vincennes
 qui marchent toutes les deux heures. Le service de la Poste se fait encore
 assez bien.
 
-J'ai reçu une lettre de Mme Ismalun qui me prie de passer aux Messageries pour
+J'ai reçu une lettre de M<sup>me</sup>  Ismalun qui me prie de passer aux Messageries pour
 retirer fs 400 destinés à un Peintre pour un portrait terminé, mais qui sera
 expédié, dieu sait quand. Elle se fait l'illusion que l'on travaille à son
 bracelet, et espère le recevoir très prochainement. Elle ajoute que son mari
