--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -24,7 +24,7 @@ M<sup>r</sup> Kunst m'a chargé de vous envoyer la dépêche suivante:
 
 Cette dépêche est expédiée à 5 hres 1/2.
 
-Mme Ismalun est à Villers-sur-Mer, je lui adresse deux plis venant d'Egypte
+M<sup>me</sup>  Ismalun est à Villers-sur-Mer, je lui adresse deux plis venant d'Egypte
 distribués ce matin. Rien encore pour vous.
 
 La Tte de <ins>fs 4,350</ins> vient d'être présentée à l'encaissement, elle est
