--- a/docs/_posts/1870-09-22-22-septembre-1870.md
+++ b/docs/_posts/1870-09-22-22-septembre-1870.md
@@ -16,7 +16,7 @@ Je vous confirme, Monsieur, toutes mes lettres de chaque jour sans interruption
 lettre du 10, vous recevrez donc toutes les autres plus ou moins rapidement
 suivant les circonstances du moment.
 
-Le Group de fs 400 envoyé par Mme Ismalun n'est pas encore arrivé à Paris, et
+Le Group de fs 400 envoyé par M<sup>me</sup>  Ismalun n'est pas encore arrivé à Paris, et
 je n'ai même pas reçu encore la lettre de l'Administration à Marseille.
 
 Louise m'a remis aujourd'hui son livre de dépenses, je lui ai fait quelques
@@ -39,7 +39,7 @@ aurez d'autres. Toujours dévoué à vos intérêts, j'ai du entrer dans ces
 quelques détails, sur lesquels je me suis plus appesanti que ma femme qui veut
 autant que possible tout concilier et ne pas se mettre Louise à dos.
 
-M<sup>r</sup> et Mme M. Hellmann ont envoyé une lettre de faire part de la naissance d'une
+M<sup>r</sup> et M<sup>me</sup>  M. Hellmann ont envoyé une lettre de faire part de la naissance d'une
 fille.
 
 
