--- a/docs/_posts/1870-08-08-8-aout-1870.md
+++ b/docs/_posts/1870-08-08-8-aout-1870.md
@@ -31,8 +31,8 @@ esprits.
 
 J'espère en votre prochain retour.
 
-Je reçois, à l'instant, une lettre de Ss Ece datée du 31 juillet, elle annonce
-fs 7,500. par le prochain bateau Français et Ss Ece ajoute qu'elle tachera de
+Je reçois, à l'instant, une lettre de S<sup>s</sup> E<sup>ce</sup> datée du 31 juillet, elle annonce
+fs 7,500. par le prochain bateau Français et S<sup>s</sup> E<sup>ce</sup> ajoute qu'elle tachera de
 vous adressser 20 ou 25,000 fr, par chacun des courriers suivants, jusqu'à
 complément des fs 200,000 que vous lui avez demandés.
 
