--- a/docs/_posts/1870-09-01-1er-septembre-1870.md
+++ b/docs/_posts/1870-09-01-1er-septembre-1870.md
@@ -27,8 +27,8 @@ panique qui s'est emparée de ses habitants, et à mon avis, je crois que: <ins>
 attaquable.
 
 Je viens de recevoir une lettre de l'Administration des Télégraphes en réponse
-à une réclamation que je lui avait adressée pour la dépêche recommandée pour Ss
-Ece Aly Pacha, dont nous n'avions jamais eu, par l'Administration, certitude de la
+à une réclamation que je lui avait adressée pour la dépêche recommandée pour
+S<sup>s</sup> E<sup>ce</sup> Aly Pacha, dont nous n'avions jamais eu, par l'Administration, certitude de la
 remise. Je rentrerai demain, dans la moitié de la dépêche soit fs 78.
 
 Ma femme a été sensible à votre bon souvenir, Monsieur, et elle me charge de
