--- a/docs/_posts/1870-09-17-17-septembre-1870.md
+++ b/docs/_posts/1870-09-17-17-septembre-1870.md
@@ -11,7 +11,7 @@ Monsieur A. Grünberg, Munich
 
 
 Je vous confirme, Monsieur, ma lettre du 16 C<sup>t</sup>. C'est demain le jour de l'envoi
-de la correspondance en Egypte. J'écrirai à Ss Ece pour l'aviser de l'envoi des
+de la correspondance en Egypte. J'écrirai à S<sup>s</sup> E<sup>ce</sup> pour l'aviser de l'envoi des
 deux journaux illustrés: la Guerre Illustrée et le Monde Illustré. J'écrirai
 aussi à M<sup>r</sup> M. Ismalun pour lui envoyer pour lui envoyer: ma réponse à M<sup>r</sup>
 Simondetti qui n'aurait pu parvenir à temps à Naples qu'il quitte aujourd'hui,
