--- a/docs/_posts/1870-07-13-13-juillet-1870.md
+++ b/docs/_posts/1870-07-13-13-juillet-1870.md
@@ -11,10 +11,10 @@ Monsieur A. Grünberg, Heidelberg
 
 J'ai l'honneur de vous confirmer ma lettre du 12 C<sup>t</sup>. J'ai appris aujourd'hui
 par M<sup>r</sup> Dugied, que les enfants de son Excellence étaient arrivés à Dijon
-seulement pour le dernier bateau et que Ss. Ece ne partirait pour la France,
+seulement pour le dernier bateau et que S<sup>s</sup>. E<sup>ce</sup> ne partirait pour la France,
 que par le bateau du 29 C<sup>t</sup>., s'arrêtant à Dijon deux ou trois jours, avant de
 gagner Paris.
-Il n'y aurait que le cas de guerre qui pourrait faire renoncer à Ss Ece de
+Il n'y aurait que le cas de guerre qui pourrait faire renoncer à S<sup>s</sup> E<sup>ce</sup> de
 venir en France.
 
 Le bruit de cet après-midi est que la chambre veut la guerre, la Gauche même
