--- a/docs/_posts/1870-08-05-5-aout-1870.md
+++ b/docs/_posts/1870-08-05-5-aout-1870.md
@@ -27,7 +27,7 @@ Cette dépêche est expédiée à 5 hres 1/2.
 M<sup>me</sup>  Ismalun est à Villers-sur-Mer, je lui adresse deux plis venant d'Egypte
 distribués ce matin. Rien encore pour vous.
 
-La Tte de <ins>fs 4,350</ins> vient d'être présentée à l'encaissement, elle est
+La T<sup>te</sup>  de <ins>fs 4,350</ins> vient d'être présentée à l'encaissement, elle est
 acquittée pour Hadamard & Bruhl à qui M<sup>r</sup> Jacques l'avait négociée.
 
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par la
