--- a/docs/_posts/1870-08-12-12-aout-1870.md
+++ b/docs/_posts/1870-08-12-12-aout-1870.md
@@ -51,7 +51,7 @@ murs de Paris, il faudrait qu'ils aient renversé un rempart de deux ou trois
 millions de poitrines humaines........
 
 M<sup>r</sup> Kunst m'a remis aujourd'hui fs 15,000. pour l'échéance de demain,
-acceptations de 5 Ttes Arnold Grünberg.
+acceptations de 5 T<sup>te</sup> s Arnold Grünberg.
 
 Inclus une lettre de Madame Grünberg, la copie de celle-ci vous arrivera par
 vois de Brindisi.
