--- a/docs/_posts/1870-08-12-12-aout-1870.md
+++ b/docs/_posts/1870-08-12-12-aout-1870.md
@@ -15,7 +15,7 @@ dont inclus la copie.
 
 M<sup>r</sup> L. Rau a reçu, ce matin, votre dépêche lui annonçant que la Maison
 Oppenheime aurait à lui compter la somme de fs 49,000. pour le C<sup>t</sup>e de S<sup>s</sup> E<sup>ce</sup>
-Aly Pacha. Il s'est présenté chez Messrs Oppenheim & Cie qui n'avaient pas
+Aly Pacha. Il s'est présenté chez Messrs Oppenheim & C<sup>ie</sup> qui n'avaient pas
 encore été avisés. Il se représentera demain.
 
 J'ai passé écriture à la date du 11 C<sup>t</sup>, d'une somme de fs 90,000. encaissée
