--- a/docs/_posts/1870-10-10-10-octobre-1870.md
+++ b/docs/_posts/1870-10-10-10-octobre-1870.md
@@ -26,7 +26,7 @@ Commune. Il a suffi de quelques Bataillons de la Garde-Nationale qui avaient
 Place, pour réduire à néant cette manifestation désaprouvée par tous les vrais
 patriotes. Les cris isolés de vive la commune étant restés sans écho, ces
 messieurs en ont été pour leurs frais, et ils se sont tous dispersés hués par
-la foule. Flourens, Blanqui et Cie conspirateurs toujours et quand même sont
+la foule. Flourens, Blanqui et C<sup>ie</sup> conspirateurs toujours et quand même sont
 surveillés, et je ne les engage pas à faire de nouvelles tentatives de ce
 genre, car tous les bons citoyens unis pour la même cause, la défense
 nationale, leur feraient un mauvais parti.
