--- a/docs/_posts/1870-11-04-4-novembre-1870.md
+++ b/docs/_posts/1870-11-04-4-novembre-1870.md
@@ -25,7 +25,7 @@ qui étaient de garde aux remparts et les votes de l'armée.
 Le triomphe de l'ordre est assuré, mais je n'aurais jamais cru que le chiffre
 des non eût atteint un nombre aussi élevé. Les maneuvres hostiles seront
 promptement déjouées; déjà Felix Piat est arrêté, et les Flourens, Blanqui
-& Cie, qui se cachent, ne tarderont pas à rejoindre le premier.
+& C<sup>ie</sup>, qui se cachent, ne tarderont pas à rejoindre le premier.
 
 On vote aujourd'hui pour l'élection des maires des vingt arrondissements, et
 Lundi on votera pour celle des adjoints. Paris reprend son calme habituel, et
