--- a/docs/_posts/1870-11-15-15-novembre-1870.md
+++ b/docs/_posts/1870-11-15-15-novembre-1870.md
@@ -13,7 +13,7 @@ Monsieur A. Grünberg, Munich
 Je vous confirme, Monsieur, la lettre du 13 C<sup>t</sup> et celle du 14 adressée par ma
 femme à Madame Grünberg pendant ma garde aux remparts.
 
-La 3me Cie du 1er Bataillon, dont je faits partie, ayant été un peu
+La 3me C<sup>ie</sup> du 1er Bataillon, dont je faits partie, ayant été un peu
 désorganisée par l'organisation des compagnies de guerre mobilisées, nous
 étions réduits à 70 hommes seulement, et nous avons subi cinq heures de faction
 chaque, deux de jour et trois de nuit.
