--- a/docs/_posts/1870-09-25-25-septembre-1870.md
+++ b/docs/_posts/1870-09-25-25-septembre-1870.md
@@ -24,7 +24,7 @@ avons eu deux alertes pendant la nuit, elles peuvent offrir quelques charmes
 d'hier, ça n'est pas drôle dutout. Ce cri: <ins>aux armes</ins> qui retentit dans
 le poste et nous arrache à un sommeil agité que nous cherchons à prendre entre
 les heures rapprochées d'une faction, n'a rien de gai, et Messieurs le Baron
-Alphonse de Rothschild et Fould qui font partie de la 3e Cie, trouvent, comme
+Alphonse de Rothschild et Fould qui font partie de la 3e C<sup>ie</sup>, trouvent, comme
 moi, qu'il vaudrait mieux nous faire monter la garde dans l'intérieur de Paris,
 que de nous exposer ainsi, nous autres pères de famille, à la garde d'un
 Bastion qui peut d'un moment à l'autre recevoir des obus et des boulets
