--- a/docs/_posts/1870-08-12-12-aout-1870.md
+++ b/docs/_posts/1870-08-12-12-aout-1870.md
@@ -42,7 +42,7 @@ durée. Dans la scéance de ce jour, doit être présenté un projet de loi pour
 prorogation des trente jours des échéances des effets de commerce payables
 depuis le 11 Août jusqu'au 20 Septembre de manière à ce que les effets échus le
 11 Août, ne soient payables que le 11 Septembre prochain, et ainsi de suite.
-C'est dumoins l'article 1er d'un projet de loi présenté, par M<sup>r</sup> Le Ministre du
+C'est dumoins l'article 1<sup>er</sup> d'un projet de loi présenté, par M<sup>r</sup> Le Ministre du
 Commerce dans la séance d'hier et pour lequel l'urgence a été déclarée. Quant
 à l'armement des Forts qui entourent Paris, et à la transformation de toutes
 les barières de la Capital en Ponts-Levis et Poternes, c'est excès de
