--- a/docs/_posts/1870-09-10-10-septembre-1870.md
+++ b/docs/_posts/1870-09-10-10-septembre-1870.md
@@ -29,7 +29,7 @@ Vous avez reçu deux fois déjà des billets de garde et comme j'ai répondu au
 second billet que vous n'étiez pas encore revenu d'Egypte, votre Capitaine
 était disposé à faire enlever le fusil qui vous a été confié, lorsque je l'ai
 prié de le laisser, et à partir de ce jour, je faits partie de la
-Garde-Nationale, 3eme Compagnie 1ere Légion, pour le maintien de l'ordre dans
+Garde-Nationale, 3eme Compagnie 1<sup>er</sup>e Légion, pour le maintien de l'ordre dans
 notre quartier, et la défense du foyer contre l'invasion. Quoique j'aye dépassé
 la limite d'age, tout citoyen se doit à sa patrie, et aujourd'hui plus que
 jamais tout homme valide doit payer de sa personne. Vous ne pouvez vous
