--- a/docs/_posts/1870-10-02-2-octobre-1870.md
+++ b/docs/_posts/1870-10-02-2-octobre-1870.md
@@ -15,7 +15,7 @@ post_scriptum: |
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 1er 8bre.
+Je vous confirme, Monsieur, ma lettre du 1<sup>er</sup> 8bre.
 
 Nous venons de faire une promenade à Neuilly. Vous ne sauriez vous imaginer
 l'aspect du Bois de Boulogne à porte Maillot, c'est navrant, mais la défense
