--- a/docs/_posts/1870-10-11-11-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-11-11-octobre-1870-(Clara).md
@@ -9,7 +9,7 @@ destination: Munich
 
 Monsieur,
 
-Le 1er bataillon a été appelé ce matin à l'Hôtel de ville pour réprimer les
+Le 1<sup>er</sup> bataillon a été appelé ce matin à l'Hôtel de ville pour réprimer les
 manifestations qui pourraient avoir lieu à l'occasion de l'arrestation de
 <ins class="straight">Flourens, Blanqui</ins> etc., messieurs de la bande qui
 demande la <ins class="straight">Commune</ins>; je viens donc en vous donnant
