--- a/docs/_posts/1870-10-18-18-octobre-1870.md
+++ b/docs/_posts/1870-10-18-18-octobre-1870.md
@@ -18,7 +18,7 @@ contremarches au pas gymnastique qui ont du bien mouiller des gilets de
 flanelle, notez que ce genre d'exercice active les digestions et prédispose
 à un fort appétit que, dans les circonstances présentes, il n'est pas toujours
 facile de satisfaire. Le Patriotisme fait tout prendre en patience, nous sommes
-au 34me jour du siège, et il faut bien espérer que dans la première quinzaine
+au 34<sup>me</sup> jour du siège, et il faut bien espérer que dans la première quinzaine
 de Décembre, les événements qui vont se passer d'ici là, amèneront notre
 délivrance.
 
