--- a/docs/_posts/1870-10-24-24-octobre-1870.md
+++ b/docs/_posts/1870-10-24-24-octobre-1870.md
@@ -5,7 +5,7 @@ place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
-note: 37me Journée du siège
+note: 37<sup>me</sup> Journée du siège
 post_scriptum: |
   Le Gouvernement ayant fait paraître un ordre pour la réquisition des fourages,
   je me suis précautionné de quantités suffisantes pour les assurer à Latis
