--- a/docs/_posts/1870-10-30-30-octobre-1870.md
+++ b/docs/_posts/1870-10-30-30-octobre-1870.md
@@ -21,8 +21,8 @@ voir passer, rue Royale, une batterie d'artillerie dans laquelle figurent
 l'ennemi.
 
 Je sors de chez Monsieur Louis, comme moi, il est commandé pour son service aux
-remparts demain. Son poste étant au 5me secteur, et le mien au 6me, ce qui le
-place au 51me bastion et moi au 57me, nous nous sommes promis d'aller nous
+remparts demain. Son poste étant au 5<sup>me</sup> secteur, et le mien au 6<sup>me</sup>, ce qui le
+place au 51<sup>me</sup> bastion et moi au 57<sup>me</sup>, nous nous sommes promis d'aller nous
 visiter l'un et l'autre dans le courant de la journée. Nous ne regrettons
 qu'une chose, c'est de ne pas trouver aux bastions 61 et 62 qui, chaque jour
 envoient des boulets et des obus dans la direction de Meudon et de Montretout,
