--- a/docs/_posts/1870-11-01-1er-novembre-1870.md
+++ b/docs/_posts/1870-11-01-1er-novembre-1870.md
@@ -18,7 +18,7 @@ j'étais sous les armes pour rejoindre mon Bataillon qui se rendait aux
 Remparts, et les feuilles du matin nous donnaient dabord la nouvelle de la
 capitulation de Metz et celle de la reprise du Bourget par l'ennemi. C'est sous
 ces tristes impressions que, par une pluie fine et froide, nous nous rendions
-au 57me Bastion qui se trouve à la Muette.
+au 57<sup>me</sup> Bastion qui se trouve à la Muette.
 A 10 heures 1/2 du soir, nous eumes  une alerte qui n'était pas faite pour nous
 remettre des émotions de la journée, une animation singulière régnait sur les
 remparts, des estaphetes se succédaient à de courts intervales, la Générale
@@ -28,7 +28,7 @@ et Félix Piat s'était ruée dans la salle des délibérations du Gouvernement 
 s'y était installée pour décréter la Commune. A minuit, nous étions relevés de
 notre poste par la Garde-Mobile, et nous étions dirigés sur la Place Vendôme
 pour attendre les ordres. C'est là, qu'à 3 heures et demie du matin, le
-G<sup>al</sup> Trochu délivré miraculeusement d'entre les mains de ces forcenés par le 106me
+G<sup>al</sup> Trochu délivré miraculeusement d'entre les mains de ces forcenés par le 106<sup>me</sup>
 Bataillon de la Gde Natle, est venu nous passer en revue et nous remercier de
 notre concours. J'avais les pieds à la glace et la tête en feu et vous pouvez
 vous imaginer la surprise de ma femme me voyant rentrer à cette heure indue.
