--- a/docs/_posts/1870-11-05-5-novembre-1870.md
+++ b/docs/_posts/1870-11-05-5-novembre-1870.md
@@ -32,7 +32,7 @@ réserves, le vote de l'Alsace et de la Loraine, le Gouvernement
 de la défense nationale a décidé à l'unanimité, que l'armistice ainsi compris
 devait être repoussé. Ce sera donc une guerre à outrance.
 
-Aujourd'hui a paru le 5me numéro de la Gazette des Absents que vous recevrez,
+Aujourd'hui a paru le 5<sup>me</sup> numéro de la Gazette des Absents que vous recevrez,
 sans doute, par l'entremise de Monsieur Louis.
 
 Veuillez agréer, Monsieur, l'expression de mes sentiments dévoués.
