--- a/docs/_posts/1870-11-12-12-novembre-1870.md
+++ b/docs/_posts/1870-11-12-12-novembre-1870.md
@@ -23,7 +23,7 @@ affaire. Le statu quo dans lequel nous sommes ne peut durer maintenant, rien ne
 transpire sur les projets du G<sup>al</sup> Trochu, mais depuis deux ou trois jours il
 y a un mouvement de troupes inusité, et l'Artillerie surtout se remue.
 
-C'est aujourd'hui que paraît le 7me numéro de la Gazette des absents, je viens
+C'est aujourd'hui que paraît le 7<sup>me</sup> numéro de la Gazette des absents, je viens
 de le lire, il ne manque pas d'intérêt. Sans doute, Monsieur Louis vous
 l'adresse.
 
