--- a/docs/_posts/1870-11-30-30-novembre-1870.md
+++ b/docs/_posts/1870-11-30-30-novembre-1870.md
@@ -28,6 +28,6 @@ Charenton, canonade et fusillade étaient constantes, je vous dirai demain
 quelques détails sur cette affaire qui n'a pas duré moins de 10 heures dit-on.
 
 Les maisons, magasins et établissements publics seront privés de Gaz à partir
-de demain 1er Décembre, la voie publique seule et les Ballons l'emploieront.
+de demain 1<sup>er</sup> Décembre, la voie publique seule et les Ballons l'emploieront.
 
 Veuillez agréer, Monsieur, mes salutations bien empressées.
