--- a/docs/_posts/1870-12-03-3-decembre-1870.md
+++ b/docs/_posts/1870-12-03-3-decembre-1870.md
@@ -29,7 +29,7 @@ Dallemagne, qui en fait partie, vient de m'envoyer un de ses chevaux qui ne
 peut continuer la campagne.
 Je vais aller au Palais Royal pour avoir une ordonnance et les rations de
 Fourrage.
-Latis fait partie de l'Intendance Gale, c'est le 3me cheval d'un Intendant dont
+Latis fait partie de l'Intendance Gale, c'est le 3<sup>me</sup> cheval d'un Intendant dont
 les 2 autres sont en campagne.
 
 Veuillez, Monsieur, présenter nos respects à Madame Grünberg, et agréez, je
