--- a/docs/_posts/1870-11-02-2-novembre-1870.md
+++ b/docs/_posts/1870-11-02-2-novembre-1870.md
@@ -10,7 +10,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 1er Novembre.
+Je vous confirme, Monsieur, ma lettre du 1<sup>er</sup> Novembre.
 
 Aucune tentative nouvelle ne s'est faite sur l'Hôtel de Ville, et le
 Gouvernement vient de décréter un Plebiscite qui aura lieu dans la journée de
