--- a/docs/_posts/1870-12-02-2-decembre-1870.md
+++ b/docs/_posts/1870-12-02-2-decembre-1870.md
@@ -10,9 +10,9 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 1er Décembre.
+Je vous confirme, Monsieur, ma lettre du 1<sup>er</sup> Décembre.
 
-Les rapports officiels sur les opérations des 29, 30 9bre et 1er C<sup>t</sup> sont
+Les rapports officiels sur les opérations des 29, 30 9bre et 1<sup>er</sup> C<sup>t</sup> sont
 satisfaisants.
 Nous sommes remplis d'admiration et de sympaties pour cette armée, formée
 depuis deux mois seulement, qui marche au feu, avec l'entrain et la bravoure de
