--- a/docs/_posts/1870-09-03-3-septembre-1870.md
+++ b/docs/_posts/1870-09-03-3-septembre-1870.md
@@ -18,7 +18,7 @@ Egypte par bateaux Anglais et Français, j'en retire une lettre et un petit mot
 de Madame Grünberg, pensant qu'il ne peut que vous être agréable de les lire.
 Monsieur Ismalun en retournant ces lettres n'écrit pas un mot. Je reçois encore
 sous enveloppe, sans un mot, connaissement à 1 Farde café, par la maison G. L.
-D. Flli Tilche d'Alexandrie.
+D. F<sup>lli</sup> Tilche d'Alexandrie.
 
 Rien encore d'officiellement communiqué sur les batailles des 29, 30 et 31
 Août, toutes communications se trouvant interrompues pour le moment.
