--- a/docs/_posts/1870-09-11-11-septembre-1870.md
+++ b/docs/_posts/1870-09-11-11-septembre-1870.md
@@ -7,7 +7,7 @@ recipient: Adolphe Grünberg
 destination: Munich
 post_scriptum: |
   J'aurais désiré décider ma belle-mère et ma femme accompagnée de son fils
-  à partir pour St Aubin sur Mer où nous avons un logis, mais Clara n'y
+  à partir pour S<sup>t</sup> Aubin sur Mer où nous avons un logis, mais Clara n'y
   consentait qu'à la condition que je l'accompagnerais. Ces Dames restent, du
   moment où je me suis prononcé pour ne pas quitter le ... (suite illisible)
 ---
