--- a/docs/_posts/1870-09-14-14-septembre-1870.md
+++ b/docs/_posts/1870-09-14-14-septembre-1870.md
@@ -17,7 +17,7 @@ Mon mari me charge d'être son interprète auprès de vous, ne pouvant vous écr
 il part aux fortifications où il doit passer la nuit ; il a vu aujourd'ui
 Monsieur Rau qui va parfaitement.
 
-Rien de nouveau, mais l'ennemi s'avance ; les ponts de Chatou, St Cloud et
+Rien de nouveau, mais l'ennemi s'avance ; les ponts de Chatou, S<sup>t</sup> Cloud et
 Neuilly ont sauté ce matin, et les bois de Meudon, de Boulogne et Vincennes
 vont être brûlés ; quelques canons ont été essayés ce matin ; Dieu ! que c'est
 triste ; quel sera le dénouement ? Pour le moment, résignation et espoir. Nous
