--- a/docs/_posts/1870-09-18-18-septembre-1870.md
+++ b/docs/_posts/1870-09-18-18-septembre-1870.md
@@ -22,7 +22,7 @@ croyez bien que les vôtres nous sont chères à plus d'un titre.
 Je vois M<sup>r</sup> L. Rau presque tous les jours, nous attendons les événements,
 plusieurs affaires ont eu lieu déjà dans les environs de Paris, mais les
 détails manquent. A partir de ce matin, toutes les lignes de chemin de fer sont
-coupées, il n'y a que les trains de Versailles, de St Germain, et de Vincennes
+coupées, il n'y a que les trains de Versailles, de S<sup>t</sup> Germain, et de Vincennes
 qui marchent toutes les deux heures. Le service de la Poste se fait encore
 assez bien.
 
