--- a/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
+++ b/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
@@ -28,7 +28,7 @@ l'ennemi (nous pouvons l'affirmer) a souffert mais Dieu veuille que tout
 finisse bien!...
 
 Chatou et Rueil sont entourés par les Prussiens en ce moment, et on me dit
-qu'on se bat à St Denis.
+qu'on se bat à S<sup>t</sup> Denis.
 
 Nous nous sommes permis, mon mari et moi quelques observations à Louise,
 relativement aux dépenses alimentaires pour les Mobiles ; la chéreté des vivres
