--- a/docs/_posts/1870-10-14-14-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-14-14-octobre-1870-(Clara).md
@@ -20,7 +20,7 @@ mort de Monsieur de Dampierre tombé glorieusement à l'assaut d'une barricade!
 Cent et quelques prisonniers Badois et Bavarois ; j'en ai vu passer sept qui
 étaient enchantés de leur situation!
 
-Le château de St Cloud offre sans doute des ruines à cette heure ; le feu
+Le château de S<sup>t</sup> Cloud offre sans doute des ruines à cette heure ; le feu
 y a été mis hier pour déloger l'ennemi ; quelle désolation!
 
 C'est là qu'on jugera de nos sacrifices pour nous défendre!
