--- a/docs/_posts/1870-10-15-15-octobre-1870.md
+++ b/docs/_posts/1870-10-15-15-octobre-1870.md
@@ -32,7 +32,7 @@ a été le point de l'action, les mobiles de la Côte d'or et de l'Aube ont eu l
 hommes de la journée, et la retraite s'est opérée en bon ordre, la
 reconnaissance ayant atteint le but que l'on se proposait.
 
-Le Chateau de St Cloud était encombré de vivres et de munitions, on a dû
+Le Chateau de S<sup>t</sup> Cloud était encombré de vivres et de munitions, on a dû
 chercher à anéantir ces ressources de l'ennemi et le Mont Valérien s'est chargé
 de la besogne. Le Chateau ne présente plus que des ruines fumantes, et l'on dit
 que le Roi Guillaume se serait ému d'une pareille décision, il doit
