--- a/docs/_posts/1870-10-28-28-octobre-1870.md
+++ b/docs/_posts/1870-10-28-28-octobre-1870.md
@@ -13,7 +13,7 @@ Je vous confirme, Monsieur, ma lettre du 27 C<sup>t</sup>.
 
 La canonnade d'hier a, en effet, eu pour objet de gêner l'ennemi dans
 l'installation de ses batteries. Les feux de deux bastions des remparts se sont
-joints à ceux du Mont-Valérien dans la direction de Meudon et de St Cloud.
+joints à ceux du Mont-Valérien dans la direction de Meudon et de S<sup>t</sup> Cloud.
 
 Nous avons eu à déplorer, il y a peu de jours, l'explosion d'une fabrique de
 bombes à Grenelle qui heureusement n'a pas fait beaucoup de victimes, hier a eu
