--- a/docs/_posts/1870-11-06-6-novembre-1870.md
+++ b/docs/_posts/1870-11-06-6-novembre-1870.md
@@ -17,7 +17,7 @@ complètement vidée. Les puissances étrangères, malgré les prétentions
 impossibles de M<sup>r</sup> de Bismarck, ne croiraient pas encore terminées toutes
 négociations. La Russie, sur laquelle on semble beaucoup compter en France, et
 avec juste raison, aurait pris l'initiative de vouloir continuer à négocier,
-jusqu'à ce qu'une réponse fût venue à St Pétersbourg. L'Armistice suivie d'une
+jusqu'à ce qu'une réponse fût venue à S<sup>t</sup> Pétersbourg. L'Armistice suivie d'une
 Paix honorable mettrait fin à bien des misères, il faudrait être ennemi de son
 pays pour ne pas désirer une pareille solution.
 
