--- a/docs/_posts/1870-10-03-3-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-03-3-octobre-1870-(Clara).md
@@ -21,7 +21,7 @@ ont succombé hier, à l'Ambulance, à leurs blessures.
 Ah ! que c'était triste ! et combien j'ai pleuré, en songeant que ces hommes,
 prussiens ou français étaient des pères de famille!
 
-Ma mère me quitte aujourd'hui ; elle va habiter avec mon frère rue St Florentin;
+Ma mère me quitte aujourd'hui ; elle va habiter avec mon frère rue S<sup>t</sup> Florentin;
 l'Intendance quitte le Palais royal par précaution. La garde Mobile, qui
 a passé à Neuilly, a pillé et dévasté les maisons où ils ont séjourné ; les
 cantinières ont emporté beaucoup de porcelaines, pourvu que ce ne soit pas
