--- a/docs/_posts/1870-11-07-7-novembre-1870.md
+++ b/docs/_posts/1870-11-07-7-novembre-1870.md
@@ -28,7 +28,7 @@ J'ai depuis hier, un cheval de l'Intendance Générale dans vos écuries, je l'a
 accueilli avec d'autant plus d'empressement que le Gouvernement est à la
 recherche des écuries vides pour les utiliser à l'occasion. C'est un des
 chevaux de l'Intendant G<sup>al</sup> M<sup>r</sup> Wolff que nous voyons beaucoup, et qui ayant son
-appartement rue St Florentin, tout à côté de la rue Royale, désire avoir son
+appartement rue S<sup>t</sup> Florentin, tout à côté de la rue Royale, désire avoir son
 cheval préféré plus près de lui, les autres se trouvant au Palais Royal. J'en
 avais parlé à Monsieur Louis, il y a quelques jours, qui m'avait autorisé à 
 accueillir cette demande. Il est bien entendu que c'est une ordonnance qui le
