full year vs partial
Signed-off-by: Raphaël Pinson <raphael.pinson@camptocamp.com>

--- a/docs/_posts/1870-07-11-11-juillet-1870.md
+++ b/docs/_posts/1870-07-11-11-juillet-1870.md
@@ -2,6 +2,7 @@
 layout: post
 title: "11 juillet 1870"
 date: 1870-07-11
+full_year: true
 place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
