--- a/docs/_posts/1871-01-05-5-janvier-1871.md
+++ b/docs/_posts/1871-01-05-5-janvier-1871.md
@@ -2,6 +2,7 @@
 layout: post
 date: 1871-01-05
 date_text: 1<sup>er</sup>, 2, 3, 4 et 5 Janv. 1871
+full_year: true
 place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
