num_month + day
Signed-off-by: Raphaël Pinson <raphael.pinson@camptocamp.com>

--- a/docs/_posts/1870-09-13-13-septembre-1870-(Clara).md
+++ b/docs/_posts/1870-09-13-13-septembre-1870-(Clara).md
@@ -2,10 +2,9 @@
 layout: post
 date: 1870-09-13
 full_year: true
-place: Paris
+num_month: true
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 post_scriptum: |
   P.S. Je désire vivement faire partie d'une ambulance de Paris et vais tâcher de réussir.
   Vous ne pouvez vous figurer, Madame, ce qu'est Paris à cette heure!
