--- a/docs/_posts/1870-09-18-18-septembre-1870-(Clara).md
+++ b/docs/_posts/1870-09-18-18-septembre-1870-(Clara).md
@@ -2,10 +2,9 @@
 layout: post
 date: 1870-09-18
 full_year: true
-place: Paris
+num_month: true
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 post_scriptum: |
   P.S. Louise ne veut pas être oubliée auprès de vous ; elle est très dévouée dans
   son service.
