--- a/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
+++ b/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
@@ -2,10 +2,9 @@
 layout: post
 date: 1870-09-24
 full_year: true
-place: Paris
+num_month: true
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 post_scriptum: |
   J'embrasse tendrement les bébés. Mon mari a vu Monsieur Rau hier ; il allait
   très bien et venait de monter sa garde.
