--- a/docs/_posts/1870-10-03-3-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-03-3-octobre-1870-(Clara).md
@@ -2,10 +2,9 @@
 layout: post
 date: 1870-10-03
 full_year: true
-place: Paris
+num_month: true
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 ---
 
 Chère Madame,
