--- a/docs/_posts/1870-10-05-5-octobre-1870_(Clara).md
+++ b/docs/_posts/1870-10-05-5-octobre-1870_(Clara).md
@@ -2,10 +2,9 @@
 layout: post
 date: 1870-10-05
 full_year: true
-place: Paris
+num_month: true
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 title: 6 Octobre 1870 (Clara)
 post_scriptum: Mes amitiés bien affectueuses à Madame Kunst.
 ---
