--- a/docs/_posts/1870-10-11-11-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-11-11-octobre-1870-(Clara).md
@@ -2,10 +2,10 @@
 layout: post
 date: 1870-10-11
 full_year: true
+num_month: true
 place: Paris
 author: Clara Guillier
 recipient: Adolphe Grünberg
-destination: Munich
 ---
 
 Monsieur,
