--- a/docs/_posts/1870-10-27-27-octobre-1870.md
+++ b/docs/_posts/1870-10-27-27-octobre-1870.md
@@ -1,10 +1,12 @@
 ---
 layout: post
 date: 1870-10-27
+num_month: true
 place: Paris
 author: Louis Guillier
 recipient: Adolphe Grünberg
 destination: Munich
+note: '40<sup>me</sup> Jour du siège.'
 ---
 
 Monsieur A. Grünberg, Munich
