--- a/docs/_posts/1870-11-14-14-novembre-1870-(Clara).md
+++ b/docs/_posts/1870-11-14-14-novembre-1870-(Clara).md
@@ -2,10 +2,9 @@
 layout: post
 date: 1870-11-14
 full_year: true
-place: Paris
+num_month: true
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 post_scriptum: Mille choses aimables à M<sup>r</sup> et M<sup>me</sup> Kunst.
 ---
 
