--- a/docs/_posts/1870-11-20-20-novembre-1870-(Clara).md
+++ b/docs/_posts/1870-11-20-20-novembre-1870-(Clara).md
@@ -2,10 +2,10 @@
 layout: post
 date: 1870-11-20
 full_year: true
-place: Paris
+num_month: true
+day: Dimanche
 author: Clara Guillier
 recipient: Elisabeth Grünberg
-destination: Munich
 ---
 
 Bien chère Madame,
