--- a/docs/_posts/1870-10-14-14-octobre-1870-(Clara).md
+++ b/docs/_posts/1870-10-14-14-octobre-1870-(Clara).md
@@ -2,10 +2,10 @@
 layout : post
 date : 1870-10-14
 full_year: true
-place : Paris
+num_month: true
 author : Clara Guillier
+place: Paris
 recipient : Adolphe Grünberg
-destination : Munich
 ---
 
 
