--- a/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
+++ b/docs/_posts/1870-09-24-24-septembre-1870-(clara).md
@@ -3,6 +3,7 @@ layout: post
 date: 1870-09-24
 full_year: true
 num_month: true
+day: Samedi
 author: Clara Guillier
 recipient: Elisabeth Grünberg
 post_scriptum: |
