--- a/docs/_posts/1870-11-20-20-novembre-1870-(Clara).md
+++ b/docs/_posts/1870-11-20-20-novembre-1870-(Clara).md
@@ -17,8 +17,8 @@ Il est cinq heures et je veux par le ballon (qui partira cette nuit) vous
 envoyer mon souvenir!
 
 Nous avons parfaitement aperçu, d'une maison de Passy, le mont Valérien dans
-tous ses détails ; une redoute Prussienne à Clamart ; le château en ruines de St
-Cloud et Montretout ; Dieu ! que l'aspect du bois est affreux!
+tous ses détails ; une redoute Prussienne à Clamart ; le château en ruines de
+S<sup>t</sup> Cloud et Montretout ; Dieu ! que l'aspect du bois est affreux!
 
 Monsieur Rau est venu nous voir en mon absence j'ai beaucoup regretté sa
 visite ; il va très-bien.
