--- a/docs/_posts/1870-10-01-1er-octobre-1870.md
+++ b/docs/_posts/1870-10-01-1er-octobre-1870.md
@@ -11,7 +11,7 @@ destination: Munich
 Monsieur A. Grünberg, Munich
 
 
-Je vous confirme, Monsieur, ma lettre du 30 7bre.
+Je vous confirme, Monsieur, ma lettre du 30 7<sup>bre</sup>.
 
 Monsieur L. Rau, que j'ai vu ce matin, nous fera l'honneur de diner demain soir
 avec nous. Les Boucheries n'ouvrent que tous les 3 jours, le Gouvernement
