--- a/docs/_posts/1870-10-07-7-octobre-1870.md
+++ b/docs/_posts/1870-10-07-7-octobre-1870.md
@@ -31,5 +31,5 @@ que ce sont de vifs engagements avec les avants-poste, soutenus par un feu bien
 nourri des forts. Demain je vous ferai connaître les résultats officiels.
 
 Je vous présente, mon cher Monsieur, mes salutations bien empressées. Votre
-dernière lettre est du 13 7bre, quand en recevrai-je une autre, Dieu seul le
+dernière lettre est du 13 7<sup>bre</sup>, quand en recevrai-je une autre, Dieu seul le
 sait!
