--- a/docs/_posts/1870-10-19-19-octobre-1870.md
+++ b/docs/_posts/1870-10-19-19-octobre-1870.md
@@ -27,7 +27,7 @@ Des Ballons s'enlèvent maintenant régulièrement tous les deux jours, et le
 retour des pigeons voyageurs nous annonce que généralement l'attérissement
 s'effectue d'une manière heureuse. Mais si nos lettres partent, les vôtres ne
 nous arrivent pas, pas plus de l'étranger que de la Province ; Votre dernière
-est du 13 7bre. Le Gouvernement cependant a des moyens qui lui permettent
+est du 13 7<sup>bre</sup>. Le Gouvernement cependant a des moyens qui lui permettent
 d'être au courant de ce qui se passe en Province, et les nouvelles sont de plus
 en plus encourageantes.
 
