--- a/docs/_posts/1870-11-03-3-novembre-1870.md
+++ b/docs/_posts/1870-11-03-3-novembre-1870.md
@@ -27,7 +27,7 @@ Je lis dans le Journal du jour la lettre suivante:
 > et vous offre l'expression de mes sentiments distingués.
 
 Signé : Emile Vanderheym.  
-Capitaine, officier d'ordonnance du Général commandt supérieur de Vincennes.   3. 9bre 170.
+Capitaine, officier d'ordonnance du Général commandt supérieur de Vincennes.   3. 9<sup>bre</sup> 170.
 
 Le poste d'honneur de M<sup>r</sup> E. Vanderheym doit le dispenser de commander sa
 compagnie en face de l'ennemi. Je le crois moins exposé que nous, simples
