--- a/docs/_posts/1870-11-08-8-novembre-1870.md
+++ b/docs/_posts/1870-11-08-8-novembre-1870.md
@@ -22,7 +22,7 @@ défendre notre honneur, notre foyer et l'indépendance de la patrie.
 Consigné hier toute la journée, par suite des craintes de manifestations
 à l'Hôtel de Ville qui n'ont pas eu lieu, le 1<sup>er</sup> Bataillon dont je fais partie,
 n'a pas été appelé. On redoutait aussi que l'on se portât sur la prison où se
-trouvent quelques émeutiers de la journée du 31 8bre, nommés Maires ou Adjoints
+trouvent quelques émeutiers de la journée du 31 8<sup>bre</sup>, nommés Maires ou Adjoints
 dans une très faible minorité d'Arrondissements ; Aucun fait n'est venu
 confirmer ces bruits. Aujourd'hui plus que jamais, l'union est nécessaire, et
 la répression ne doit plus se discuter, mais agir promptement et surtout
