--- a/docs/_posts/1870-11-17-17-novembre-1870.md
+++ b/docs/_posts/1870-11-17-17-novembre-1870.md
@@ -32,7 +32,7 @@ aurons la satisfaction d'avoir signe de vie de vous.
 
 Voici les 4 questions:
 
-* N°5 Avez-vous reçu mes mettres de chaque jour du 9 7bre à ce jour?
+* N°5 Avez-vous reçu mes mettres de chaque jour du 9 7<sup>bre</sup> à ce jour?
 * N°6 Votre santé et celle de Madame Grünberg sont-elles bonnes?
 * N°7 Les enfants vont-ils bien?
 * N°8 Messieurs Joseph et Fritz font-ils partie de l'armée Bavaroise?
