--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -3,8 +3,8 @@ last_modified_at: 2021-04-03
 layout: post
 place: Bruxelles
 author: Louis Rau
-recipient: Allan?
-destination: ?
+recipient: 'Allan?'
+destination: '?'
 ---
 
 Mein Lieber Allan
