--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -7,9 +7,8 @@ recipient: 'Allan?'
 destination: '?'
 ---
 
-Mein Lieber Allan
 
+This letter needs to be transcribed. If you know how to read Sütterlin German
+and can help, please [contact me](mailto:raphink@gmail.com)!
 
-...
-
-von Freund Ludwig
+![Letter]({{ "assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url }})
