--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -10,4 +10,4 @@ destination: '?'
 This letter needs to be transcribed. If you know how to read Sütterlin German
 and can help, please [contact me](mailto:raphink@gmail.com)!
 
-[![Letter]({{ "assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url }})]("assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url)
+[![Letter]({{ "assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url }})]({{ "assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url }})
