--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -7,6 +7,34 @@ recipient: 'Allan?'
 destination: '?'
 ---
 
+
+Mein Lieber Allie,
+
+Umstehendend Bf von Guillier habe geöffnet
+weil ich fürchtete, er sei nicht ..oche in Paris. Einst...ende
+... er heute nacht gut für nur h..nden in Paris uns. die
+Communter haben eine grosse Angst & sie glauben ich
+bis Montag in Paris zu sein. Offentlich werden dem
+alle Lalt von nur Allie bald ..sch..den
+
+Ich bin gestern Abend hier angekommen,
+... ich wiedereinmal in Köln sehen geblieben bin
+Nicht Runbeobend in der Eisenbechen must mit den Hotels
+Associat seins, kommt z est ... fünf von München mag
+& trifft Freitag Abend hier sein.
+
+Lnz St bald etner von Euch und den
+Reinden sein; wann werde ich Sie wiedersehen!?
+
+Schauen Grüß an Euren liebe Mutter & Geschwester
+
+
+
+von Eurer Ludwig
+
+
+
+
 This letter needs to be transcribed. If you know how to read Sütterlin German
 and can help, please [contact me](mailto:raphink@gmail.com)!
 
