--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -20,13 +20,13 @@ alle Lalt von nur Alle bald ..sch..den
 Ich bin gestern Abend hier angekommen,
 ... ich wiedereinmal in Köln sehen geblieben bin
 Nicht Runbeobend in der Eisenbechen must mit den Hotels
-Associat seins, kommt z est ... fünf von München mag
+Associat sein, kommt z ist morgen früh von München mag
 & trifft Freitag Abend hier sein.
 
 Lnz St bald etner von Euch und den
 Reinden sein; wann werde ich Sie wiedersehen!?
 
-Schauen Grüß an Euren liebe Mutter & Geschwester
+Schauen Grüß an Euren liebe Mutter & Geschwestern
 
 
 
