--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -14,7 +14,7 @@ Umstehendend Bf von Guillier habe geöffnet
 weil ich fürchtete, er sei nicht ..oche in Paris. Einst...ende
 ... er heute nacht gut für nur h..nden in Paris uns. die
 Communter haben eine grosse Angst & sie glauben ich
-bis Montag in Paris zu sein. Offentlich werden dem
+bis Montag in Paris zu sein. Hoffentlich werden dem
 alle Lalt von nur Alle bald ..sch..den
 
 Ich bin gestern Abend hier angekommen,
