--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -11,7 +11,7 @@ destination: 'Munich'
 Mein Lieber Alle,
 
 Umstehenden Bf von Guillier habe geöffnet
-weil ich fürchtete, er sei nicht ..oche in Paris. Einst...ende
+weil ich fürchtete, er sei nicht nahe in Paris. Einst...ende
 ... er heute nacht gut für nur h..nden in Paris uns. die
 Communter haben eine grosse Angst & sie glauben ich
 bis Montag in Paris zu sein. Hoffentlich werden dem
